[gd_scene load_steps=2 format=3 uid="uid://dlhgqcxrftaam"]

[ext_resource type="Script" path="res://d10_dice_ui.gd" id="1_ey5ff"]

[node name="D10DiceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ey5ff")

[node name="DieSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
